@@ -207,6 +207,80 @@ class NodeSetTest(unittest.TestCase):
             assert n == "bigcluster%d" % i
             i += 1
 
+    def test_numerical_bracket_folding(self):
+        """test NodeSet numerical bracket folding (eg. 1[2-3]4)"""
+        # Ticket #228
+        nodeset = NodeSet("node01[0-1]")
+        self.assertEqual(str(nodeset), "node[010-011]")
+        nodeset = NodeSet("prod-02[10-20]")
+        self.assertEqual(str(nodeset), "prod-[0210-0220]")
+        nodeset = NodeSet("prod-2[10-320]")
+        self.assertEqual(str(nodeset), "prod-[210-2320]")
+        nodeset = NodeSet("prod-02[010-320]")
+        self.assertEqual(str(nodeset), "prod-[02010-02320]")
+        nodeset = NodeSet("prod-000[1-9]")
+        self.assertEqual(str(nodeset), "prod-[0001-0009]")
+        nodeset = NodeSet("prod-100[1-9]")
+        self.assertEqual(str(nodeset), "prod-[1001-1009]")
+        nodeset = NodeSet("prod-100[040-042]")
+        self.assertEqual(str(nodeset), "prod-[100040-100042]")
+        self.assertEqual(len(nodeset), 3)
+        # complex ranges
+        nodeset = NodeSet("prod-10[01,05,09-15/2,40-50,52]")
+        self.assertEqual(str(nodeset), "prod-[1001,1005,1009,1011,1013,1015,1040-1050,1052]")
+        nodeset.autostep = 3
+        self.assertEqual(str(nodeset), "prod-[1001-1009/4,1011-1015/2,1040-1050,1052]")
+        # multi patterns
+        nodeset = NodeSet("prod-100[040-042],sysgrp-00[01-02]")
+        self.assertEqual(str(nodeset), "prod-[100040-100042],sysgrp-[0001-0002]")
+
+        # /!\ padding mismatch cases: current behavior
+        nodeset = NodeSet("prod-0[10-345]") # padding mismatch
+        self.assertEqual(str(nodeset), "prod-[010-345]")
+        nodeset = NodeSet("prod-1[10-345]") # no mismatch there
+        self.assertEqual(str(nodeset), "prod-[110-1345]")
+        nodeset = NodeSet("prod-02[10-345]") # padding mismatch
+        self.assertEqual(str(nodeset), "prod-[0210-2345]")
+        nodeset = NodeSet("prod-02[10-34,069-099]") # padding mismatch
+        self.assertEqual(str(nodeset), "prod-[0210-0234,2069-2099]")
+
+        # numericalf olding with nD nodesets
+        nodeset = NodeSet("x01[0-1]y01[0-1]z01[0-1]")
+        self.assertEqual(str(nodeset), "x[010-011]y[010-011]z[010-011]")
+        self.assertEqual(len(nodeset), 2*2*2)
+        nodeset = NodeSet("x22[0-1]y00[0-1]z03[0-1]")
+        self.assertEqual(str(nodeset), "x[220-221]y[000-001]z[030-031]")
+        self.assertEqual(len(nodeset), 2*2*2)
+        nodeset = NodeSet("x22[0-1]y000z03[0-1]")
+        self.assertEqual(str(nodeset), "x[220-221]y000z[030-031]")
+        self.assertEqual(len(nodeset), 2*1*2)
+        nodeset = NodeSet("x22[0-1]0y03[0-1]0")
+        self.assertEqual(str(nodeset), "x[2200-2210]y[0300-0310]")
+        self.assertEqual(len(nodeset), 121)
+        nodeset = NodeSet("x22[0-1]0y03[0-1]0-ipmi")
+        self.assertEqual(str(nodeset), "x[2200-2210]y[0300-0310]-ipmi")
+        self.assertEqual(len(nodeset), 121)
+
+        # more numerical folding (with suffix)
+        nodeset = NodeSet("nova[1-4]56")
+        self.assertEqual(str(nodeset), "nova[156-456]")
+        self.assertEqual(len(nodeset), 301)
+        nodeset = NodeSet("nova6[1-4]56")
+        self.assertEqual(str(nodeset), "nova[6156-6456]")
+        self.assertEqual(len(nodeset), 301)
+        nodeset = NodeSet("nova6[1-4]56c")
+        self.assertEqual(str(nodeset), "nova[6156-6456]c")
+        self.assertEqual(len(nodeset), 301)
+        nodeset = NodeSet("prod-[01-34]0")
+        self.assertEqual(str(nodeset), "prod-[010-340]")
+        nodeset = NodeSet("prod-01[1-5]0")
+        self.assertEqual(str(nodeset), "prod-[0110-0150]")
+
+        # more nD (with suffix)
+        nodeset = NodeSet("x01[0-1]y01[0-1]z01[0-1]-ipmi")
+        self.assertEqual(str(nodeset), "x[010-011]y[010-011]z[010-011]-ipmi")
+        self.assertEqual(len(nodeset), 2*2*2)
+
     def testCommaSeparated(self):
         """test NodeSet comma separated to ranges (folding)"""
         nodeset = NodeSet("cluster115,cluster116,cluster117,cluster130,"
